--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1",
-    "prisma": "^6.19.0"
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -32,11 +31,11 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.0",
-    "prisma": "^6.19.0",
-    "zod": "^3.22.2",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "prisma": "^6.19.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^3.22.2"
   }
 }
