feat: integrate Stripe payment processing with create, confirm, and refund functionalities

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,3 +7,10 @@ DATABASE_URL="postgresql://username:password@localhost:5432/movie_reservation_db
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+
+STRIPE_SECRET_KEY=sk_test_51QMk1mP8bKhE4vZGfP9xYz2...
+STRIPE_PUBLISHABLE_KEY=pk_test_51QMk1mP8bKhE4vZGTw3...
+STRIPE_WEBHOOK_SECRET=whsec_d8f7g6h5j4k3l2m1...
+FRONTEND_URL=http://localhost:3000
+STRIPE_CURRENCY=usd
