--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "stripe": "^19.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.0",
+    "@types/stripe": "^8.0.416",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prisma": "^6.19.0",
